services/couchbase/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchbase
spec:
  rules:
    - host: couchbase.PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchbase
                port:
                  number: 80
